# scuffed-pitch-plugin

./: CMakeLists.txt  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/workflows/: build-project.yaml
src/: plugin-main.cpp
